--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Catholic Church -- Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: The Catholic World, Vol. 13, April to September, 1871
 url: http://www.gutenberg.org/ebooks/48448
